antes de adicionar o materialize

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,6 +1,19 @@
 $pricolor:#F7CA19;
 $secolor:#313131; 
 
+span.marca, span.preco {
+    display: block;
+}
+
+.preco {
+    font-size: 2em;
+}
+
+
+
+.red-text {
+  color: #F44336 !important; }
+
 .left_col {
   background:$secolor;
 }
