modal com materialize

--- a/src/scss/materialize.scss
+++ b/src/scss/materialize.scss
@@ -15,7 +15,7 @@ $pricolor:#F7CA19;
 
 // components
 @import "components/global";
-@import "components/badges";
+//@import "components/badges";
 @import "components/icons-material-design";
 @import "components/navbar";
 @import "components/typography";
