--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -192,12 +192,11 @@ span.marca, span.preco {
   display: inline-block;
 }
 .nav_menu {
-  float: left;
-  background: $pricolor;
-  border-bottom: 1px solid #D9DEE5;
-  margin-bottom: 10px;
-  width: 100%;
-  position: relative;
+    float: left;
+    /* border-bottom: 1px solid #313131; */
+    width: 100%;
+    position: relative;
+    margin-bottom: 10px;
 }
 @media (min-width: 480px) {
   .nav_menu {
@@ -348,7 +347,8 @@ body .container.body .right_col {
   color: #fff !important;
 }
 .top_nav .nav>li>a:focus, .top_nav .nav>li>a:hover, .top_nav .nav .open>a, .top_nav .nav .open>a:focus, .top_nav .nav .open>a:hover {
-  background: #D9DEE4;
+  background:#fbc02d;
+  height:58px;
 }
 body {
   color: #313131;
@@ -663,10 +663,10 @@ a:hover, a:focus {
   margin-bottom: 0 !important;
 }
 .toggle {
-  float: left;
-  margin: 0;
-  padding-top: 16px;
-  width: 70px;
+    float: left;
+    margin: 0;
+    width: 70px;
+    padding-top: 16px;
 }
 .toggle a {
   padding: 15px 15px 0;
@@ -4365,9 +4365,39 @@ ul.notifications {
 
 //ajustes no css core//
 
+@media only screen and (min-width: 601px){
+nav, nav .nav-wrapper i, nav a.sidenav-trigger, nav a.sidenav-trigger i {
+    height: 58px !important;
+    line-height: 35px !important;
+}
+}
+
 @media only screen and (min-width: 993px){
 .container {
     width: 100% !important;
 }
+}
+
+
+.info-number .badge {
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 13px;
+    padding: 2px 6px;
+    position: absolute;
+    right: 2px;
+    top: 8px;
+}
+
+nav i, nav [class^="mdi-"], nav [class*="mdi-"], nav i.material-icons {
+    display: block;
+    font-size: 24px;
+    height: 0;
+    line-height: 58px;
+}
+
+
+a.dropdown-toggle.info-number {
+    height: 58px;
 }
 
